--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,8 @@
         "unordered_set": "cpp",
         "variant": "cpp",
         "vector": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "iomanip": "cpp",
+        "stack": "cpp"
     }
 }
