--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,8 +1,6 @@
 {
     "version": "0.2.0",
     "configurations": [
-        
-
         {
             "name": "(lldb) Launch",
             "type": "cppdbg",
@@ -23,7 +21,7 @@
             "MIMode": "lldb"
         },
         {
-            "name": "C/C++: clang build and debug active file",
+            "name": "C/C++: g++ build and debug active file",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
@@ -33,7 +31,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "lldb",
-            "preLaunchTask": "C/C++: clang build active file"
+            "preLaunchTask": "C/C++: g++ build active file"
         }
     ]
 }
