Lasy Day Commit

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,7 @@ Utilization Certificate.pdf
 git-diagnostics-2024-02-26-2222.zip
 Utilization Certificate.pdf
 Bit_Manipulation_Notes.pdf
+*.prob
+*.pdf
+*.bin
 
