--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,29 @@
         "list": "cpp",
         "regex": "cpp",
         "span": "cpp",
-        "valarray": "cpp"
-    }
+        "valarray": "cpp",
+        "any": "cpp",
+        "barrier": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "condition_variable": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "cuchar": "cpp",
+        "execution": "cpp",
+        "memory": "cpp",
+        "fstream": "cpp",
+        "future": "cpp",
+        "latch": "cpp",
+        "numbers": "cpp",
+        "print": "cpp",
+        "scoped_allocator": "cpp",
+        "semaphore": "cpp",
+        "shared_mutex": "cpp",
+        "source_location": "cpp",
+        "syncstream": "cpp",
+        "typeindex": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
